--- a/views/pretty.erb
+++ b/views/pretty.erb
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="css/pretty.css">
     </head>
     <body>
+            <h1>This is it bois!</h1>
         <div class="words">
             <div>
                 <div class="box box1">
